kubernetes/apps/tier-1-infrastructure/jaeger/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
  namespace: observability
spec:
  hostnames:
    - jaeger.sulibot.com
  parentRefs:
    - name: gateway-internal
      namespace: network
  rules:
    - backendRefs:
        - name: jaeger-query
          port: 16686
